--- a/stylesheet.css
+++ b/stylesheet.css
@@ -298,7 +298,7 @@ button#send {
 }
 	
 #Impressum { 
-	background-color:#808080;
+	background-color:#4b4b4b;
     padding: 50px 0px;
 	margin: 0px;
 }
