--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,6 +55,7 @@ header {
 }
 header div.headerinhalt {display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   padding: 10px 10px 10px 10px;
   width: 100%;}
@@ -66,7 +67,10 @@ header h1 {
   font-weight: normal;
 }
 
-#HWFLogo {height: 50px;}
+#HWFLogo {
+  height: 50px;
+  margin: 2.5px auto auto 10px;
+}
 
 navbar {
   margin-left: 30px;
@@ -135,6 +139,16 @@ main {
 
 
 /*CSS Code für Bildergalerie und Team- Start*/
+/* Dieser Teil macht das Bild bei Hover dunkler*/
+/*.hovertitle:hover > img {
+  opacity: 0.5;
+}*/
+
+/*Dieser Teil macht, dass die Schrift bei Hover sichtbar ist*/
+/*.hovertitle:hover figcaption {
+  display:flex;
+}*/
+
 .galerie {
   display: flex;
   flex-direction: row;
@@ -184,15 +198,7 @@ main {
   margin: 0;
 }
 
-/* Dieser Teil macht das Bild bei Hover dunkler*/
-.hovertitle:hover > img {
-  opacity: 0.5;
-}
 
-/*Dieser Teil macht, dass die Schrift bei Hover sichtbar ist*/
-.hovertitle:hover figcaption {
-  display:flex;
-}
 /*CSS Code für Bildergalerie - Ende*/
 
 
@@ -222,6 +228,8 @@ details {
   padding:10px;
   margin: 20px 10px 20px 10px;
 }
+
+summary:focus {outline:none;}
 
 .formularfeld {
         border:1px solid;
@@ -311,14 +319,14 @@ button#send {
       navbar {
 		display: none;
         width: 100%;
-        max-width: 648px;
-        margin: 0px auto 0px 205.5px;
+        max-width: 767px;
+        margin: 0px auto 0px 141.5px;
 	  }
 
       navbar ul {flex-direction: column;}
 
       navbar ul li {
-		border-bottom: 1px solid;
+		    border-bottom: 1px solid;
         border-color: rgba(255,255,255,0.5);
       }
 
@@ -352,6 +360,10 @@ button#send {
       /*CSS Code für Kontakt- Ende*/
 	}
 
+
+
+
+
 /* Portrait Smartphones */
     @media screen and (max-width:400px){
       /* Smartphone CSS */
@@ -364,7 +376,7 @@ button#send {
       navbar {
 	    display: none;
         width:100%;
-        margin: 0px 205.5px 0px 205.5px;
+        margin: 0px 141.5px 0px 141.5px;
 	  }
 
       navbar ul {flex-direction: column;}
