--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ h1,h2 {
 	color: #22547a;
 }
 
-h3,h4 { 
+h3,h4 {
 	color: #4b5c69;
 }
 
@@ -150,14 +150,14 @@ main {
 
 /*CSS Code für Bildergalerie und Team- Start*/
 /* Dieser Teil macht das Bild bei Hover dunkler*/
-/*.hovertitle:hover > img {
+.hovertitle:hover > img {
   opacity: 0.5;
-}*/
+}
 
 /*Dieser Teil macht, dass die Schrift bei Hover sichtbar ist*/
-/*.hovertitle:hover figcaption {
+.hovertitle:hover figcaption {
   display:flex;
-}*/
+}
 
 .galerie {
   display: flex;
@@ -304,8 +304,8 @@ button#send {
     justify-content: space-between;
     flex-wrap: wrap;
 }
-	
-#Impressum { 
+
+#Impressum {
 	background-color:#4b4b4b;
     padding: 50px 0px;
 	margin: 0px;
