--- a/stylesheet.css
+++ b/stylesheet.css
@@ -135,14 +135,18 @@ navbar ul li a {
       color: white;
     }
 
+    .slick-next,.slick-prev{
+      z-index: 9;
+      width: 50px;
+      height: 50px;
+    }
+
     .slick-next {
       right: 15px;
-      z-index: 9;
     }
 
     .slick-prev {
       left:15px;
-      z-index: 9;
     }
 
     .slick-slide {
