--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,11 +86,11 @@ header h1 {
 
 #Header  {
 	background-color: transparent;
-    -webkit-transition: background-color 0.5s ease-in-out;
-    -moz-transition: background-color 0.5s ease-in-out;
-    -ms-transition: background-color 0.5s ease-in-out;
-    -o-transition: background-color 0.5s ease-in-out;
-    transition: background-color 0.5s ease-in-out;
+    -webkit-transition: background-color 0.5s ease-out, box-shadow 0.5s ease-out;
+    -moz-transition: background-color 0.5s ease-out, box-shadow 0.5s ease-out;
+    -ms-transition: background-color 0.5s ease-out, box-shadow 0.5s ease-out;
+    -o-transition: background-color 0.5s ease-out, box-shadow 0.5s ease-out;
+    transition: background-color 0.5s ease-out, box-shadow 0.5s ease-out;
 }
 
 
