--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,8 +125,8 @@ navbar ul li a {
   opacity: 0.7;
 }
 
-navbar ul li a:hover {opacity:1}
-navbar ul li a:active {opacity:1}
+navbar ul li:hover a{opacity:1}
+navbar ul li:active a{opacity:1}
 
 #menubutton {
   display:none;
