--- a/stylesheet.css
+++ b/stylesheet.css
@@ -242,7 +242,7 @@ navbar ul li:active a{opacity:1}
 		background-image: url('./images/ParallaxBild.jpg');
 
 		/* Full height */
-		height: 100%; 
+		height: 100%;
 
 		/* Create the parallax scrolling effect */
 		background-attachment: fixed;
@@ -489,13 +489,13 @@ button#send {
       /*CSS Code für Header und Menü - Ende*/
 
       /*CSS Code für Referenzen und Partner - Start*/
-      .logo a {opacity: 1;}
+      
       /*CSS Code für Referenzen und Partner - Ende*/
 
       /*CSS Code für Bildergalerie und Team- Start*/
-        .hovertitle.portfolio {max-width: 45%;}
+        .portfolio {max-width: 45%;}
 
-		.hovertitle.team {min-width: 0px;}
+		    .team {min-width: 0px;}
 		 /*CSS Code für Bildergalerie und Team- Ende*/
 
         /*CSS Code für Kontakt- Start*/
@@ -545,7 +545,7 @@ button#send {
       /*CSS Code für Header und Menü - Ende*/
 
       /*CSS Code für Referenzen und Partner - Start*/
-      .logo a {opacity: 1;}
+
       /*CSS Code für Referenzen und Partner - Ende*/
 
       /*CSS Code für Bildergalerie und Team- Start*/
