--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,7 +129,7 @@ navbar ul li a {
 }
 
 navbar ul li:hover a{opacity:1}
-navbar ul li:active a{opacity:1}
+navbar ul li a.active {opacity:1}
 
 #menubutton {
   display:none;
