--- a/stylesheet.css
+++ b/stylesheet.css
@@ -304,7 +304,7 @@ navbar ul li a.active {opacity:1}
 
 /*CSS Code für Partner - Start*/
 #Partner {
- box-shadow: 0 3px 5px 0 rgba(0,0,0,0.2), 0 1px 10px 0 rgba(0,0,0,0.15);
+		box-shadow: 2px 10px 43px 3px rgba(0,0,0,0.7);
 }
 /*CSS Code für Partner - Ende*/
 
@@ -317,21 +317,6 @@ navbar ul li a.active {opacity:1}
 		height: 100%;
 	}
 
-	.parallax {
-		/* The image used */
-		background-image: url('./images/ParallaxBild.jpg');
-		
-		/* Full height */
-		height: 100%;
-
-		/* Create the parallax scrolling effect */
-		background-attachment: fixed;
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		padding: 30px;
-		width:100%;
-	}
 	
 	.parallax-blur{
 		/* The image used */
@@ -345,7 +330,25 @@ navbar ul li a.active {opacity:1}
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
-		padding: 30px;
+		padding-top: 80px;
+		padding-bottom:80px;
+		box-shadow: inset 1px 39px 43px -38px rgba(0,0,0,0.69);
+	}
+	.parallax-blur-short{
+		/* The image used */
+		background-image: url('./images/ParallaxBild-blurred.jpg');
+
+		/* Full height */
+		height: 100%;
+
+		/* Create the parallax scrolling effect */
+		background-attachment: fixed;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		padding-top: 0px;
+		padding-bottom: 80px;
+		box-shadow: inset 1px -34px 43px -38px rgba(0,0,0,0.69);
 	}
 	
 	.parallax-map-blur {
@@ -360,9 +363,7 @@ navbar ul li a.active {opacity:1}
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
-		padding: 30px;
-	
-		
+		padding: 30px; 
 	}
 		
 
