--- a/stylesheet.css
+++ b/stylesheet.css
@@ -331,8 +331,10 @@ navbar ul li a.active {opacity:1}
 		background-repeat: no-repeat;
 		background-size: cover;
 		padding-top: 80px;
-		padding-bottom:80px;
-		box-shadow: inset 1px 39px 43px -38px rgba(0,0,0,0.69);
+		padding-bottom: 80px;
+		-webkit-box-shadow: inset 0 15px 20px 0px rgba(0, 0, 0, 0.57);
+        -moz-box-shadow: inset 0 15px 20px 0px rgba(0, 0, 0, 0.57);
+		box-shadow: inset 0 15px 20px 0px rgba(0, 0, 0, 0.57);
 	}
 	.parallax-blur-short{
 		/* The image used */
@@ -348,7 +350,9 @@ navbar ul li a.active {opacity:1}
 		background-size: cover;
 		padding-top: 0px;
 		padding-bottom: 80px;
-		box-shadow: inset 1px -34px 43px -38px rgba(0,0,0,0.69);
+	    -webkit-box-shadow: inset 0px -34px 43px -38px rgba(0,0,0,0.69);
+        -moz-box-shadow: inset 0px -34px 43px -38px rgba(0,0,0,0.69);
+		box-shadow: inset 0px -34px 43px -38px rgba(0,0,0,0.69);
 	}
 
 	.parallax-map-blur {
@@ -364,6 +368,9 @@ navbar ul li a.active {opacity:1}
 		background-repeat: no-repeat;
 		background-size: cover;
 		padding: 30px;
+		-webkit-box-shadow: inset 0px 38px 37px -33px rgba(0,0,0,0.69);
+        -moz-box-shadow: inset 0px 38px 37px -33px rgba(0,0,0,0.69);
+		box-shadow: inset 0px 38px 37px -33px rgba(0,0,0,0.69);
 	}
 
 
@@ -398,16 +405,30 @@ navbar ul li a.active {opacity:1}
   flex-direction: column;
   justify-content: space-between;
 }
+#Kontakt h2, #Kontakt p {
+	color: white;
+}
 
 .socialmedia img {
   width:56px;
   margin-right: 10px;
+  opacity: 0.5;
 }
+
+.socialmedia img:hover {
+	opacity:1;
+}
+
 iframe {
   border: none;
   flex:1 1 680px;
   min-height: 300px;
+  -webkit-box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.57);
+  box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.57);
 }
+
+
 /*CSS Code für den Kontakt -Ende*/
 
 
