versuch eines scrachpads

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -301,6 +301,30 @@ navbar ul li a.active {opacity:1}
 
 /*CSS Code für Bildergalerie - Ende*/
 
+/*CSS Code für Leistungen - Start*/
+.canvascontainer {
+  border: none;
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+.canvas {
+  position: absolute;
+  top: 0;
+  width: 100%
+}
+
+.form {
+  padding: 20px;
+  width: 100%;
+}
+.form img {width: 100%;}
+/*CSS Code für Leistungen - Ende*/
 
 /*CSS Code für Partner - Start*/
 #Partner {
@@ -367,7 +391,7 @@ navbar ul li a.active {opacity:1}
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
-		padding: 30px;
+		padding: 30px 0px;
 		-webkit-box-shadow: inset 0px 38px 37px -33px rgba(0,0,0,0.69);
         -moz-box-shadow: inset 0px 38px 37px -33px rgba(0,0,0,0.69);
 		box-shadow: inset 0px 38px 37px -33px rgba(0,0,0,0.69);
@@ -546,6 +570,9 @@ input#send {
                   and (min-width: 401px){
       /* Tablet CSS*/
         .nichtbreiter {padding:10px;}
+        h1, h2, h3, h4 {font-size:21px}
+        p, a, li, summary, label {font-size:14px}
+        .impressum p {font-size: 13px;}
       /*CSS Code für Header und Menü - Start*/
         header {
   		    flex-wrap: wrap;
@@ -640,6 +667,9 @@ input#send {
     @media screen and (max-width:400px){
     /* Smartphone CSS */
         .nichtbreiter {padding:10px;}
+        h1, h2, h3, h4 {font-size:19px}
+        p, a, li, summary, label {font-size:13px}
+        .impressum p {font-size: 11px;}
       /*CSS Code für Header und Menü - Start*/
         header {
   		    flex-wrap: wrap;
