--- a/stylesheet.css
+++ b/stylesheet.css
@@ -302,15 +302,6 @@ navbar ul li a.active {opacity:1}
 /*CSS Code für Bildergalerie - Ende*/
 
 /*CSS Code für Leistungen - Start*/
-		/*Code nur vorher-nachher Bild Start*/
-	
-	
-
-	
-					
-		/*Code nur für vorher-nachher Bild - Ende*/
-		
-		
 #Leistungen>div {position: relative;}
 .leistungstext {
   position: absolute;
@@ -523,6 +514,12 @@ summary:focus {outline:none;}
 	width:100%;
 	margin: 0px;
 }
+::placeholder, option {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  margin:0px;
+  font-weight: normal;
+}
 .Bewerbungsformular {
 	display: flex;
 	flex-wrap: wrap;
@@ -716,7 +713,7 @@ input#send {
         }
         .socialmedia img {
           margin-right: 0px;}
-		  
+
         iframe {
 		  width: 100%;
           max-height: 300px;
